--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-nitro-timer",
-  "version": "0.1.0",
-  "description": "High-performance native timer component using React Native Nitro HybridViews",
+  "version": "1.0.0",
+  "description": "High-performance native timer component using React Native Nitro HybridViews for e-commerce applications. Achieves zero bridge traffic with native UILabel/TextView rendering.",
   "main": "./lib/module/index.js",
   "types": "./lib/typescript/src/index.d.ts",
   "exports": {
@@ -43,19 +43,28 @@
   },
   "keywords": [
     "react-native",
+    "timer",
+    "countdown",
+    "nitro",
+    "performance",
+    "native",
+    "e-commerce",
     "ios",
-    "android"
+    "android",
+    "typescript",
+    "bridge-free",
+    "high-performance"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/example/react-native-nitro-timer.git"
+    "url": "git+https://github.com/Kushagraagarwal/react-native-nitro-timers.git"
   },
-  "author": "Developer <developer@example.com> (https://example.com)",
+  "author": "Kushagra <kushagra@example.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/example/react-native-nitro-timer/issues"
+    "url": "https://github.com/Kushagraagarwal/react-native-nitro-timers/issues"
   },
-  "homepage": "https://github.com/example/react-native-nitro-timer#readme",
+  "homepage": "https://github.com/Kushagraagarwal/react-native-nitro-timers/tree/main#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
@@ -76,12 +85,12 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
-    "nitro-codegen": "^0.29.6",
+    "nitro-codegen": "^0.29.4",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-builder-bob": "^0.40.13",
-    "react-native-nitro-modules": "^0.29.6",
+    "react-native-nitro-modules": "^0.29.4",
     "release-it": "^19.0.4",
     "turbo": "^2.5.6",
     "typescript": "^5.9.2"
@@ -89,7 +98,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-nitro-modules": "^0.29.6"
+    "react-native-nitro-modules": "^0.29.4"
   },
   "workspaces": [
     "example"
@@ -137,13 +146,6 @@
     "source": "src",
     "output": "lib",
     "targets": [
-      [
-        "custom",
-        {
-          "script": "nitrogen",
-          "clean": "nitrogen/"
-        }
-      ],
       [
         "module",
         {
